plugins {
    id 'java'
    id 'io.qameta.allure' version '2.12.0'
}

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(21))
    }
}

group = 'com.fakeRestApiTests'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    implementation "com.fasterxml.jackson.core:jackson-databind:2.17.2"
    implementation "io.rest-assured:rest-assured:5.5.0"
    implementation "io.rest-assured:json-path:5.5.0"
    implementation "io.rest-assured:json-schema-validator:5.5.0"

    implementation "io.qameta.allure:allure-junit5:2.29.0"
    implementation "io.qameta.allure:allure-rest-assured:2.29.0"
    implementation "com.github.javafaker:javafaker:1.0.2"

    implementation "org.slf4j:slf4j-api:2.0.13"
    runtimeOnly "org.apache.logging.log4j:log4j-core:2.24.0"
    runtimeOnly "org.apache.logging.log4j:log4j-slf4j2-impl:2.24.0"

    compileOnly "org.projectlombok:lombok:1.18.32"
    annotationProcessor "org.projectlombok:lombok:1.18.32"
    testCompileOnly "org.projectlombok:lombok:1.18.32"
    testAnnotationProcessor "org.projectlombok:lombok:1.18.32"

    testImplementation "org.junit.jupiter:junit-jupiter:5.11.3"
    testImplementation "org.junit.jupiter:junit-jupiter-params:5.11.3"
    implementation "org.assertj:assertj-core:3.27.3"
}

allure {
    version = '2.25.0'
    autoconfigure = true
    aspectjweaver = true

    adapter {
        frameworks {
            junit5 {
                enabled = true
            }
        }
    }
}


test {
    useJUnitPlatform()

    def effectiveLogLevel = System.getProperty("log.level", "INFO")
    systemProperty 'allure.results.directory', 'build/allure-results'
    systemProperty "log.level", effectiveLogLevel
    println "Using log.level = ${effectiveLogLevel}"

    testLogging {
        events 'PASSED', 'FAILED', 'SKIPPED'
        showStandardStreams = true
        exceptionFormat 'full'
    }

    doLast {
        tasks.findByName("allureReport")?.mustRunAfter("test")
    }
}

tasks.register('all') {
    dependsOn 'clean', 'test', 'allureReport'
}